--- a/greenpepper-confluence-demo/pom.xml
+++ b/greenpepper-confluence-demo/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-confluence</artifactId>
-		<version>2.11-SNAPSHOT</version>
+		<version>2.11-beta1</version>
 	</parent>
 
 	<dependencies>
