--- a/greenpepper-confluence-plugin/pom.xml
+++ b/greenpepper-confluence-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>greenpepper-confluence</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>2.11-SNAPSHOT</version>
+		<version>2.11-beta1</version>
 	</parent>
 	<artifactId>greenpepper-confluence3-plugin</artifactId>
 	<name>GreenPepper Confluence3 Plugin</name>
