--- a/greenpepper-confluence-code/pom.xml
+++ b/greenpepper-confluence-code/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>greenpepper-confluence</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>2.11-beta1</version>
+		<version>2.11-beta2-SNAPSHOT</version>
 	</parent>
 	<artifactId>greenpepper-confluence-code</artifactId>
 	<name>GreenPepper Confluence Code</name>
