--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.strator-dev.greenpepper</groupId>
 	<artifactId>greenpepper-confluence</artifactId>
-	<version>2.11-beta1</version>
+	<version>2.11-beta2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>GreenPepper Confluence</name>
 	<description>GreenPepper Plugin for Confluence WIKI</description>
@@ -163,7 +163,7 @@
 		<connection>https://github.com/strator-dev/greenpepper-open.git</connection>
 		<developerConnection>scm:git:https://github.com/strator-dev/greenpepper-open.git</developerConnection>
 		<url>https://github.com/strator-dev/greenpepper-open</url>
-	  <tag>v2.11-beta1</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<distributionManagement>
 		<snapshotRepository>
