--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 			<dependency>
 				<artifactId>greenpepper-base</artifactId>
 				<groupId>com.github.strator-dev.greenpepper</groupId>
-				<version>4.0-beta2-SNAPSHOT</version>
+				<version>${greenpepper.core.version}</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
@@ -108,6 +108,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -116,6 +117,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
