--- a/greenpepper-remote-agent/pom.xml
+++ b/greenpepper-remote-agent/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<artifactId>greenpepper-base</artifactId>
+		<artifactId>greenpepper-open</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
