--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,15 @@
 			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
 		</license>
 	</licenses>
+	<developers>
+		<developer>
+			<id>wattazoum</id>
+			<name>Oumar Aziz OUATTARA</name>
+			<email>aziz@wattazoum.fr</email>
+			<url>http://wattazoum.fr</url>
+		</developer>
+	</developers>
+
 	<scm>
 		<connection>https://github.com/strator-dev/greenpepper-open.git</connection>
 		<developerConnection>scm:git:https://github.com/strator-dev/greenpepper-open.git</developerConnection>
@@ -113,20 +122,6 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
