--- a/confluence/greenpepper-confluence-code/pom.xml
+++ b/confluence/greenpepper-confluence-code/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>greenpepper-confluence</artifactId>
         <groupId>com.github.strator-dev.greenpepper</groupId>
-        <version>4.0-beta2</version>
+        <version>4.0-beta2-SNAPSHOT</version>
     </parent>
 	
     <artifactId>greenpepper-confluence-code</artifactId>
