Setting a maven core version different than the one of the plugin was not working

--- a/confluence/greenpepper-confluence-plugin/pom.xml
+++ b/confluence/greenpepper-confluence-plugin/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -10,6 +11,9 @@
 	<artifactId>greenpepper-confluence5-plugin</artifactId>
 	<name>GreenPepper Confluence Plugin</name>
 
+	<properties>
+		<filtered-sources>${project.build.directory}/filtered-sources</filtered-sources>
+	</properties>
 
 	<profiles>
 		<profile>
@@ -81,6 +85,47 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<!-- here the phase you need -->
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${filtered-sources}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/filter</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>add-resource</id>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<directory>${filtered-sources}</directory>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
 					<execution>
@@ -108,10 +153,10 @@
 					<archive>
 						<manifestEntries>
 							<Require-Capability>osgi.extender;
-      filter:="(osgi.extender=osgi.serviceloader.processor)",
-    osgi.serviceloader;
-      filter:="(osgi.serviceloader=com.greenpepper.server.runner.spi.DefaultRunnerBuilder)";
-      cardinality:=multiple</Require-Capability>
+								filter:="(osgi.extender=osgi.serviceloader.processor)",
+								osgi.serviceloader;
+								filter:="(osgi.serviceloader=com.greenpepper.server.runner.spi.DefaultRunnerBuilder)";
+								cardinality:=multiple</Require-Capability>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -128,8 +173,7 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
