--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	</description>
 
 	<properties>
-		<greenpepper.core.version>4.0-beta2</greenpepper.core.version>
+		<greenpepper.core.version>4.0-beta3-SNAPSHOT</greenpepper.core.version>
 	</properties>
 
 	<!-- - GreenPepperOpen modules -->
