--- a/greenpepper/pom.xml
+++ b/greenpepper/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>greenpepper-base</artifactId>
@@ -14,7 +15,6 @@
 	<!-- - GreenPepper modules -->
 	<modules>
 		<module>core</module>
-		<!-- <module>core-tests</module> -->
 		<module>extensions</module>
 		<module>greenpepper-client</module>
 		<module>greenpepper-license</module>
@@ -64,10 +64,19 @@
 
 	</dependencies>
 	<build>
+
+		<plugins>
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+
 		<pluginManagement>
 			<plugins>
-				 <!-- This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
+				<!-- This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -106,9 +115,5 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	<scm>
-		<connection>https://github.com/greenpeppersoftware/greenpepper.git</connection>
-		<url>https://github.com/greenpeppersoftware/greenpepper/</url>
-	  <tag>HEAD</tag>
-  </scm>
+
 </project>
