--- a/pom.xml
+++ b/pom.xml
@@ -152,32 +152,39 @@
 			<plugin>
 				<groupId>com.github.jeluard</groupId>
 				<artifactId>plantuml-maven-plugin</artifactId>
-				<version>1.1</version>
-				<configuration>
-					<sourceFiles>
-						<directory>${basedir}/src/site/plantuml</directory>
-						<includes>
-							<include>**/*.txt</include>
-						</includes>
-					</sourceFiles>
-					<verbose>true</verbose>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>pre-site</phase>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>net.sourceforge.plantuml</groupId>
-						<artifactId>plantuml</artifactId>
-						<version>7999</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>com.github.jeluard</groupId>
+					<artifactId>plantuml-maven-plugin</artifactId>
+					<version>1.1</version>
+					<configuration>
+						<sourceFiles>
+							<directory>${basedir}/src/site/plantuml</directory>
+							<includes>
+								<include>**/*.txt</include>
+							</includes>
+						</sourceFiles>
+						<outputDirectory>${project.build.directory}/site/images/plantuml</outputDirectory>
+					</configuration>
+					<executions>
+						<execution>
+							<phase>pre-site</phase>
+							<goals>
+								<goal>generate</goal>
+							</goals>
+						</execution>
+					</executions>
+					<dependencies>
+						<dependency>
+							<groupId>net.sourceforge.plantuml</groupId>
+							<artifactId>plantuml</artifactId>
+							<version>7999</version>
+						</dependency>
+					</dependencies>
+				</plugin>
 				<plugin>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>3.4</version>
@@ -246,6 +253,35 @@
 	</issueManagement>
 
 	<profiles>
+	
+		<profile>
+			<id>updatesite</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.github.github</groupId>
+						<artifactId>site-maven-plugin</artifactId>
+						<version>0.12</version>
+						<configuration>
+							<repositoryName>greenpepper</repositoryName>
+							<repositoryOwner>strator-dev</repositoryOwner>
+							<message>Creating site for ${project.version}</message>
+							<path>maven-site</path>
+							<branch>testgh-pages</branch>
+							<merge>true</merge>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>site</goal>
+								</goals>
+								<phase>site</phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>release</id>
 			<build>
@@ -293,10 +329,14 @@
 					<plugin>
 						<groupId>com.github.github</groupId>
 						<artifactId>site-maven-plugin</artifactId>
-						<version>0.9</version>
+						<version>0.12</version>
 						<configuration>
+							<repositoryName>greenpepper</repositoryName>
+							<repositoryOwner>strator-dev</repositoryOwner>
 							<message>Creating site for ${project.version}</message>
 							<path>maven-site</path>
+							<branch>gh-pages</branch>
+							<merge>true</merge>
 						</configuration>
 						<executions>
 							<execution>
