--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 jdk:
   - openjdk6
-script:
-  - mvn clean
-  - mvn verify
+after_success:
+  - echo "<settings><servers><server><id>ossrh</id><username>\${env.OSSRH_USER}</username><password>\${env.OSSRH_PASS}</password></server></servers></settings>" > ~/settings.xml
+  - if [ -z ${TRAVIS_TAG} ]; then mvn deploy --settings ~/settings.xml; fi
+
