--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: java
 jdk:
   - openjdk6
+before_install:
+  - mkdir ~/.m2/
+  - cp ./settings.xml ~/.m2/
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq php5-cli
 script:
-  - mvn deploy --settings ./settings.xml
+  - mvn deploy
