--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: java
 jdk:
   - openjdk6
 before_install:
-  - mkdir ~/.m2/
-  - cp ./settings.xml ~/.m2/
+  - mkdir -p ~/.m2/
+  - cp -a ./settings.xml ~/.m2/
   - sudo apt-get update -qq
   - sudo apt-get install -qq php5-cli
 script:
