Add a new macro called greenpepper-wiki ( Closes #15 )

--- a/confluence/greenpepper-confluence-code/src/main/resources/com/greenpepper/confluence/macros/macros.properties
+++ b/confluence/greenpepper-confluence-code/src/main/resources/com/greenpepper/confluence/macros/macros.properties
@@ -86,3 +86,7 @@ com.greenpepper.confluence.plugin.greenpepper-historic.param.border.desc=Indicat
 com.greenpepper.confluence.plugin.greenpepper-historic.param.showignored.desc=Indicate to show the count of ignored tests. <em>Optional. Default --&gt; false</em>
 com.greenpepper.confluence.plugin.greenpepper-historic.param.children.desc=This parameter present a summary Chart containing an aggregation of execution result. If set to first, aggregation will be done for all first level children of the specified page. If set to all, the aggregation will be done with the complete hierarchy of the specified page. Default --&gt; false</em>
 com.greenpepper.confluence.plugin.greenpepper-historic.param.labels.desc=Labels to base the search when doing the aggregation of execution result of pages<br>Using the , as the label separation is equivalent to an OR query. So <b>label1,label2</b> will retrieve all pages labeled by label1 <b>OR/AND</b> label2<br>Using the &amp; as the label separation is equivalent to an AND query. So <b>label1&amp;label2</b> will retrieve all pages labeled by label1 <b>AND</b> label2. <em>Optional. Default --&gt; None</em>
+
+
+com.greenpepper.confluence.plugin.greenpepper-wiki.label=GreenPepper Wiki
+com.greenpepper.confluence.plugin.greenpepper-wiki.desc=Allows you to use a Wiki styled syntax in the page. 
