--- a/confluence/pom.xml
+++ b/confluence/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- - Basic Project Information -->
@@ -14,12 +15,12 @@
 
 	<properties>
 		<!-- Confluence version -->
-		<atlassian.product.version>5.0.3</atlassian.product.version>        
+		<atlassian.product.version>5.0.3</atlassian.product.version>
 		<confluence.version>5.0.3</confluence.version>
-        <confluence.data.version>5.0.3</confluence.data.version>
-        <amps.version>5.0.13</amps.version>
-        <plugin.testrunner.version>1.2.3</plugin.testrunner.version>
-        <refapp.version>2.22.0</refapp.version>
+		<confluence.data.version>5.0.3</confluence.data.version>
+		<amps.version>5.0.13</amps.version>
+		<plugin.testrunner.version>1.2.3</plugin.testrunner.version>
+		<refapp.version>2.22.0</refapp.version>
 	</properties>
 
 	<dependencies>
@@ -51,18 +52,29 @@
 		</dependency>
 	</dependencies>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.atlassian.refapp</groupId>
-                <artifactId>atlassian-platform</artifactId>
-                <version>${refapp.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.atlassian.refapp</groupId>
+				<artifactId>atlassian-platform</artifactId>
+				<version>${refapp.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>com.atlassian.maven.plugins</groupId>
+					<artifactId>maven-amps-dispatcher-plugin</artifactId>
+					<version>${amps.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<modules>
 		<module>greenpepper-confluence-code</module>
 		<module>greenpepper-confluence-plugin</module>
