--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: java
+sudo: false
+addons:
+  apt:
+    packages:
+    - php5-cli
+    - mono-complete
 jdk:
   - openjdk6
 before_install:
   - mkdir -p ~/.m2/
   - cp -a ./settings.xml ~/.m2/
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq php5-cli mono-complete
 script:
   - mvn deploy
