--- a/pom.xml
+++ b/pom.xml
@@ -119,14 +119,6 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
 				<version>1.6.3</version>
@@ -156,6 +148,19 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>com.github.jeluard</groupId>
 					<artifactId>plantuml-maven-plugin</artifactId>
@@ -188,6 +193,13 @@
 				<plugin>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>3.4</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.12.4</version>
+					<configuration>
+						<redirectTestOutputToFile>true</redirectTestOutputToFile>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -253,7 +265,7 @@
 	</issueManagement>
 
 	<profiles>
-	
+
 		<profile>
 			<id>updatesite</id>
 			<build>
