--- a/greenpepper-eclipse-plugin/pom.xml
+++ b/greenpepper-eclipse-plugin/pom.xml
@@ -17,6 +17,7 @@
 	<artifactId>com.greenpepper.eclipse</artifactId>
 	<packaging>eclipse-plugin</packaging>
 	<name>GreenPepper Eclipse Plugin</name>
+	<version>4.0.0.0-SNAPSHOT</version>
 
 
 	<!-- - Dependencies that we want for all modules -->
@@ -87,23 +88,22 @@
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho-version}</version>
-				<configuration>
-					<pomDependencies>consider</pomDependencies>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<pomDependencies>consider</pomDependencies>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-packaging-plugin</artifactId>
 				<version>${tycho.version}</version>
-				<extensions>true</extensions>
 				<configuration>
 					<strictBinIncludes>false</strictBinIncludes>
 				</configuration>
@@ -158,7 +158,7 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 
 	</build>
