using shade instead of assembly

--- a/greenpepper-maven-runner/pom.xml
+++ b/greenpepper-maven-runner/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- - Basic Information -->
@@ -66,11 +67,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <scope>compile</scope>
-      </dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -83,30 +84,87 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>src/main/assembly/dep.xml</descriptor>
-							<archive>
-								<manifest>
-									<mainClass>com.greenpepper.maven.runner.Main</mainClass>
-								</manifest>
-							</archive>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<shadedArtifactAttached>true</shadedArtifactAttached>
+					<shadedClassifierName>complete</shadedClassifierName>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>com.greenpepper.maven.runner.Main</mainClass>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" />
+						<transformer implementation="org.apache.maven.plugins.shade.resource.PluginXmlResourceTransformer" />
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer" />
+					</transformers>
+					<relocations>
+						<relocation>
+							<pattern>edu.emory.mathcs</pattern>
+							<shadedPattern>com.greenpepper.shaded.edu.emory.mathcs</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>com.jcraft</pattern>
+							<shadedPattern>com.greenpepper.shaded.com.jcraft</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>ch.qos.logback</pattern>
+							<shadedPattern>com.greenpepper.shaded.ch.qos.logback</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.apache.commons</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.apache.commons</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>uk</pattern>
+							<shadedPattern>com.greenpepper.shaded.uk</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.apache.jackrabbit</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.apache.jackrabbit</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.apache.xerces</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.apache.xerces</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.apache.xmlrpc</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.apache.xmlrpc</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.cyberneko</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.cyberneko</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.jsoup</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.jsoup</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.slf4j</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.slf4j</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.xml</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.xml</shadedPattern>
+						</relocation>
+					</relocations>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
