--- a/greenpepper-maven-runner/src/test/resources/IntTests/test-issue24/pom.xml
+++ b/greenpepper-maven-runner/src/test/resources/IntTests/test-issue24/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>dummy</groupId>
     <artifactId>dummy-issue24</artifactId>
-    <version>4.0-beta3-SNAPSHOT</version>
+    <version>${project.version}</version>
     <name>test greenpepper runner</name>
 
     <build>
