--- a/greenpepper-maven-runner/src/test/resources/IntTests/test-issue24/pom.xml
+++ b/greenpepper-maven-runner/src/test/resources/IntTests/test-issue24/pom.xml
@@ -64,5 +64,15 @@
     		<artifactId>commons-codec</artifactId>
     		<version>1.10</version>
     	</dependency>
+    	<dependency>
+    		<groupId>org.slf4j</groupId>
+    		<artifactId>slf4j-api</artifactId>
+    		<version>1.6.4</version>
+    	</dependency>
+    	<dependency>
+    		<groupId>ch.qos.logback</groupId>
+    		<artifactId>logback-classic</artifactId>
+    		<version>0.9.28</version>
+    	</dependency>
     </dependencies>
 </project>
