--- a/greenpepper/core/pom.xml
+++ b/greenpepper/core/pom.xml
@@ -22,6 +22,12 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
