--- a/greenpepper-maven-runner/pom.xml
+++ b/greenpepper-maven-runner/pom.xml
@@ -78,6 +78,12 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.shared</groupId>
+			<artifactId>maven-verifier</artifactId>
+			<version>1.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
