--- a/extensions-external/selenium2/pom.xml
+++ b/extensions-external/selenium2/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>selenium</artifactId>
 			<version>${selenium.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
