--- a/greenpepper/core/pom.xml
+++ b/greenpepper/core/pom.xml
@@ -28,7 +28,13 @@
 			<version>1.8.3</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<resources>
