--- a/greenpepper-maven-plugin-it/pom.xml
+++ b/greenpepper-maven-plugin-it/pom.xml
@@ -9,7 +9,6 @@
     </parent>
     <artifactId>greenpepper-maven-plugin-it</artifactId>
     <name>greenpepper-maven-plugin-it</name>
-    <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -18,6 +17,17 @@
             <groupId>org.apache.maven.shared</groupId>
             <artifactId>maven-verifier</artifactId>
             <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.strator-dev.greenpepper</groupId>
+            <artifactId>greenpepper-maven-plugin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugin-testing</groupId>
+            <artifactId>maven-plugin-testing-harness</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
