--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<useReleaseProfile>false</useReleaseProfile>
 					<releaseProfiles>release</releaseProfiles>
+					<preparationGoals>clean install</preparationGoals>
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 					<goals>deploy</goals>
 				</configuration>
