--- a/greenpepper-maven-plugin-it/pom.xml
+++ b/greenpepper-maven-plugin-it/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.strator-dev.greenpepper</groupId>
         <artifactId>greenpepper-base</artifactId>
-        <version>4.0-RC2-SNAPSHOT</version>
+        <version>4.0-beta3-SNAPSHOT</version>
     </parent>
     <artifactId>greenpepper-maven-plugin-it</artifactId>
     <name>greenpepper-maven-plugin-it</name>
