fix some warning and add a trace log

--- a/greenpepper-maven-plugin/pom.xml
+++ b/greenpepper-maven-plugin/pom.xml
@@ -17,6 +17,7 @@
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
+			<classifier>complete</classifier>
 		</dependency>
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
