[maven-release-plugin] prepare for next development iteration

--- a/greenpepper/extensions/pom.xml
+++ b/greenpepper/extensions/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<artifactId>greenpepper</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>4.0</version>
+		<version>4.1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
