[maven-release-plugin] prepare release v4.0

--- a/extensions-external/pom.xml
+++ b/extensions-external/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-open</artifactId>
-		<version>4.0-RC2-SNAPSHOT</version>
+		<version>4.0</version>
 	</parent>
 
 	<!--
