--- a/greenpepper-maven-runner/pom.xml
+++ b/greenpepper-maven-runner/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<artifactId>greenpepper-open</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>4.0-RC2-SNAPSHOT</version>
+		<version>4.0</version>
 	</parent>
 
 	<dependencies>
