support different version for the gp core in the confluence plugin

--- a/confluence/greenpepper-confluence-code/pom.xml
+++ b/confluence/greenpepper-confluence-code/pom.xml
@@ -12,6 +12,7 @@
 	
 	<properties>
 		<jackson.version>2.6.3</jackson.version>
+        <filtered-sources>${project.build.directory}/filtered-sources</filtered-sources>
 	</properties>
 
     <dependencies>
@@ -78,5 +79,53 @@
 			<version>1.2.147</version>
 		</dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <!-- here the phase you need -->
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${filtered-sources}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/filter</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <id>add-resource</id>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <directory>${filtered-sources}</directory>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+
+    </build>
+
 
 </project>
