--- a/confluence/greenpepper-confluence-plugin/pom.xml
+++ b/confluence/greenpepper-confluence-plugin/pom.xml
@@ -10,10 +10,6 @@
 	<artifactId>greenpepper-confluence5-plugin</artifactId>
 	<name>GreenPepper Confluence Plugin</name>
 
-	<properties>
-		<filtered-sources>${project.build.directory}/filtered-sources</filtered-sources>
-	</properties>
-
 	<profiles>
 		<profile>
 			<id>confluence</id>
@@ -68,47 +64,6 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<!-- here the phase you need -->
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${filtered-sources}</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src/main/filter</directory>
-									<filtering>true</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.7</version>
-				<executions>
-					<execution>
-						<id>add-resource</id>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<directory>${filtered-sources}</directory>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
 					<execution>
@@ -119,7 +74,7 @@
 									<fileset dir="src/main/javascript">
 										<include name="*.js" />
 									</fileset>
-									<mapper type="glob" from="*.js" to="*-${pom.version}.js" />
+									<mapper type="glob" from="*.js" to="*-${project.version}.js" />
 								</copy>
 							</tasks>
 						</configuration>
