move the master to use greenpepper-core 4.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </description>
 
     <properties>
-        <greenpepper.core.version>4.0</greenpepper.core.version>
+        <greenpepper.core.version>4.1-SNAPSHOT</greenpepper.core.version>
     </properties>
 
     <!-- - GreenPepperOpen modules -->
